--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     },
     "autoload": {
         "psr-4": {
-            "FintechApps\\ExpenseTracker\\": "src/"
+            "\\Tmakinde\\ExpenseTracker\\":"src/"
         }
     },
     "authors": [
@@ -24,5 +24,10 @@
             "email": "Jesutomiwathefirst@gmail.com"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "autoload-dev": {
+        "psr-4": {
+            "\\Tmakinde\\ExpenseTracker\\":"test/"
+        }
+    },
 }
