Set up test suite

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     },
     "autoload": {
         "psr-4": {
-            "\\Tmakinde\\ExpenseTracker\\":"src/"
+            "Tmakinde\\ExpenseTracker\\": "src/"
         }
     },
     "authors": [
@@ -27,7 +27,31 @@
     "minimum-stability": "dev",
     "autoload-dev": {
         "psr-4": {
-            "\\Tmakinde\\ExpenseTracker\\":"test/"
+            "Tmakinde\\ExpenseTracker\\Tests\\": "tests/",
+            "Workbench\\App\\": "workbench/app/",
+            "Workbench\\Database\\Factories\\": "workbench/database/factories/",
+            "Workbench\\Database\\Seeders\\": "workbench/database/seeders/"
         }
     },
+    "require-dev": {
+        "orchestra/testbench": "8.x-dev",
+        "phpunit/phpunit": "10.5.x-dev"
+    },
+    "scripts": {
+        "post-autoload-dump": [
+            "@clear",
+            "@prepare"
+        ],
+        "clear": "@php vendor/bin/testbench package:purge-skeleton --ansi",
+        "prepare": "@php vendor/bin/testbench package:discover --ansi",
+        "build": "@php vendor/bin/testbench workbench:build --ansi",
+        "serve": [
+            "Composer\\Config::disableProcessTimeout",
+            "@build",
+            "@php vendor/bin/testbench serve"
+        ],
+        "lint": [
+            "@php vendor/bin/phpstan analyse"
+        ]
+    }
 }
