Update composer package name; Update composer.lock

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Tmakinde/expensetracker",
+    "name": "tmakinde/expense-tracker",
     "description": "This is a package for anyone building a banking/fintech application in Laravel to be able to seamlessly integrate an expense tracker feature into their application",
     "type": "library",
     "license": "MIT",
